--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "cross-env": "^10.0.0",
     "jest": "^29.6.1",
@@ -37,15 +35,18 @@
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "@prisma/client": "^4.16.2",
     "bcrypt": "^5.1.0",
-    "cors": "^2.8.5",
     "dayjs": "^1.11.8",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "fastify": "^5.6.0",
+    "fastify-type-provider-zod": "^6.0.0",
     "http-status": "^1.6.2",
-    "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "zod": "^4.1.7"
   }
 }
